--- a/back/todolist/src/main/resources/application.yml
+++ b/back/todolist/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 spring:
-  servlet:
-    multipart:
-      max-file-size: 100MB
-      max-request-size: 100MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/instagram
+    url: jdbc:mysql://localhost:3306/spring_todo
     username: root
     password: 1q2w3e4r
 
-#mybatis:
-#  mapper-locations:
-#    - /mappers/*.xml
+mybatis:
+  mapper-locations:
+    - /mappers/*.xml
+
+#jwt:
+#  secret:
